# distillation_ver1_ar

./: .gitignore  2026-03-22-single-teacher-project-design.md  260228_COMPARISON_AND_TRAINING_METHODS_HANDOVER.md  CHANGELOG_mobilenetv4.md  LICENSE  PROJECT_GUIDE.md  README.md  THIRD_PARTY_LICENSES.md  compile_and_profile.py  config.yaml  program.md  pyproject.toml  requirements.txt  run_train.py
AutoResearch기능탐구/: 1. Autoresearch 개념 설명 + AI 모델 학습 도움 방법.md  2. autoresearch를 적용하는 구체적 방법.md  3. 학습 시간데이터 분량 조율 전략.md  4. Epoch 중간 끊김 안전성 분석 (학습진행시).md
configs/: dual_teacher_adaptive.yaml  no_teacher_smoke.yaml  single_teacher_baseline.yaml  single_teacher_smoke.yaml  subset_no_teacher_smoke.yaml  subset_single_teacher_search.yaml  subset_single_teacher_smoke.yaml
docs/: PROJECT_GUIDE.md  PROJECT_MAP.md  README.md
docs/archive/: ROOT_DOCS_CLEANUP_SUMMARY.md
docs/archive/completed-tasks/: 2026-03-10-student-text-encoder-migration.md  260228_COMPARISON_AND_TRAINING_METHODS_HANDOVER.md  260309_ADAPTIVE_TEACHER_ROUTING_HANDOVER.md
research/: AUTORESEARCH_LITE_PLAN.md  AUTORESEARCH_READINESS_CHECKLIST.md  DECISIONS.md  EXPERIMENTS.tsv  PROJECT_PLAN.md
research/templates/: experiment_template.md
scripts/: eval.py  export_onnx.py  export_onnx_split.py  extract_features.py  train.py
scripts/preprocess/: make_jsonl_subset.py  materialize_upload_subset.py  parse_lpcvc_sources.py
src/lpcvc_retrieval/: config.py  data.py  distill.py  dual_tower.py  ema.py  export.py  logger.py  losses.py  metrics.py  mobileclip2.py  model.py  train.py
